2012-04-20 02:11-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormClassInspector.m
	* GormCore/GormClassManager.m
	* GormCore/GormDocument.m
	* GormCore/GormGenericEditor.m
	* GormCore/GormObjectInspector.m
	* GormCore/GormOutlineView.m
	* GormCore/GormPrivate.h
	* GormCore/GormPrivate.m
	* Palettes/0Menus/GormMenuEditor.m
	* Palettes/1Windows/GormDrawerAttributesInspector.m
	* Palettes/3Containers/GormTableColumnAttributesInspector.m
	* Palettes/3Containers/GormTableViewEditor.m
	* Palettes/4Data/DataPalette.m
	* Palettes/4Data/GormNumberFormatterAttributesInspector.m: Change int/unsigned int to NSInteger
	and NSUInteger to address 64-bit issues.  Patch by
	Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Plugins/Gorm/GormGormWrapperLoader.m
	* Plugins/Nib/GormNibWrapperBuilder.m
	* Plugins/Nib/GormNibWrapperLoader.m
	* Plugins/Xib/GormXibWrapperLoader.m: Clean up warnings found by clang.

2012-04-05 14:38-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormMatrixEditor.m: Change modifier to Ctrl+Shift since
	these two keys are never remapped and Alt does not always exist
	on european and some US keyboards.   This change should address
	bug#36096.

2012-03-17  German A. Arias  <german@xelalug.org>

	* Gorm.m: Added method -applicationShouldTerminateAfterLastWindowClosed:
	to avoid terminate Gorm when the user close the last window but have
	documents minimized at taskbar.

2012-02-19 18:58-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Version
	* GormInfo.plist
	* GormCore/GormFilePrefsManager.m: Update version information.

2012-02-15 17:59-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormPrivate.m: Remove poseAs: override. Fix for
	compilation with ObjC2.0 compilers.
	* Palettes/3Containers/GormNSTableColumnInspector.gorm:
	Correction for tableView column identifiers.   Delegate
	wasn't connected.

2012-02-06 02:02-EST Gregory John Casamento <greg.casamento@gmail.com>
